--- a/exploring-gleam-through-advent-of-code/index.html
+++ b/exploring-gleam-through-advent-of-code/index.html
@@ -34,8 +34,8 @@
     </head>
     <body>
       <div class="container mx-auto px-4">
-        <header class="flex justify-center py-4 text-lg font-bold tracking-wider">
-          <div class="flex space-x-4 pb-6">
+        <header class="flex justify-center py-4">
+          <nav class="flex flex-wrap justify-center gap-4 pb-6 px-2 text-lg font-bold tracking-wider">
             <a href="/">Home</a>
             <a href="/about/">About</a>
             <a href="/archive/">Archive</a>
@@ -43,7 +43,7 @@
             <a href="/reads/">Reads</a>
             <a href="/photos/">Photos</a>
             <a type="application/rss+xml" href="/index.xml">RSS</a>
-          </div>
+          </nav>
         </header>
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
