deploy: a8a7ba451fdad33a75b73c364997caf2fd301de0

--- a/reads/index.html
+++ b/reads/index.html
@@ -38,15 +38,16 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <span class="text-3xl my-4">Reads</span>
-  <section class="text-xl mt-4">
-      <ul>
-        <li>
-          <a href="/reads/test/">
-            Placeholder
-          </a>
-        </li>
-       </ul>
+  <span class="text-3xl my-4">
+    Reads
+  </span>
+  <section>
+    <a href="/reads/programming/">
+      <div class="mt-4">
+        <div class="text-xl font-bold">Programming</div>
+        <span class="text-base">Last updated 2025-03-16</span>
+      </div>
+    </a>
   </section>
 
           </div>
