deploy: 826cc9f01abd695a02e15acf3395e19c6a4e238b

--- a/exploring-gleam-through-advent-of-code/index.html
+++ b/exploring-gleam-through-advent-of-code/index.html
@@ -136,7 +136,7 @@ shift_row_right(matrix, 0, 1) # [['b', 'a'], ['c', 'd']]
 
   </article>
   <hr class="my-4">
-  <footer>
+  <footer class="italic">
     
     <div class="flex justify-between">
       
