--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a>
   </div>
   <hr class="my-4">
-  <footer>
+  <footer class="italic">
     
     <p><center><i>Find more posts in the <a href="/archive/">archive</a></i></center></p>
   
