deploy: 1ad95155009809a636377a3ff528166eebb4b180

--- a/reads/index.html
+++ b/reads/index.html
@@ -21,6 +21,7 @@
       
       <link rel="canonical" href="https://ackurat.github.io/reads/">
       <link rel="stylesheet" href="/assets/app.css">
+      <script data-goatcounter="https://ackurat.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     </head>
     <body>
       <div class="container mx-auto px-4">
