--- a/exploring-gleam-through-advent-of-code/index.html
+++ b/exploring-gleam-through-advent-of-code/index.html
@@ -31,6 +31,7 @@
       
       <link rel="canonical" href="https://ackurat.github.io/exploring-gleam-through-advent-of-code/">
       <link rel="stylesheet" href="/assets/app.css">
+      <script data-goatcounter="https://ackurat.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     </head>
     <body>
       <div class="container mx-auto px-4">
