deploy: 12c380f3e23e8f05610760c645eedd74f1018fac

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
       </a>
     </div>
-    <div class="-mx-4 my-2 flex h-1 w-[100vw] footer-gradient rounded-full sm:mx-0 sm:w-full"></div>
+    <div class="-mx-4 my-2 flex h-1 w-screen footer-gradient rounded-full sm:mx-0 sm:w-full"></div>
   <footer class="italic">
     
       <p><center><i>Find more posts in the <a href="/archive/">archive</a></i></center></p>
