--- a/setting-up-a-site-with-zine/index.html
+++ b/setting-up-a-site-with-zine/index.html
@@ -33,10 +33,18 @@
       <link rel="stylesheet" href="/assets/app.css">
       <script>
         (function() {
-          const theme = localStorage.getItem('theme');
-          if (theme) {
-            document.documentElement.style.colorScheme = theme;
-            document.documentElement.classList.add(theme)
+          const storedTheme = localStorage.getItem('theme');
+          const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+          const theme = storedTheme || systemTheme;
+
+          document.documentElement.style.colorScheme = theme;
+          document.documentElement.classList.add(theme);
+
+          const storedContrast = localStorage.getItem('highContrast') === 'true';
+          const systemContrast = window.matchMedia('(prefers-contrast: more)').matches ? 'hc' : '';
+          const contrast = storedContrast || systemContrast;
+          if (contrast) {
+            document.documentElement.classList.add('hc');
           }
         })();
       </script>
@@ -44,15 +52,15 @@
         <script data-goatcounter="https://ackurat.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
       
     </head>
-    <body class="bg-latte-crust dark:bg-macchiato-base text-latte-text dark:text-macchiato-text min-h-screen font-sans">
+    <body class="bg-latte-crust dark:bg-macchiato-base hc:bg-white hc:dark:bg-black text-latte-text dark:text-macchiato-text hc:text-black hc:dark:text-white min-h-screen font-sans">
         <header class="flex justify-center py-4" id="top">
             <nav class="flex justify-between items-center gap-4 pb-6 px-2 text-lg font-bold tracking-wider w-full max-w-2xl">
                 <a href="/">~/</a>
                 <div class="flex flex-wrap gap-4">
                     <a href="/about/">About</a>
                     <a href="/archive/">Archive</a>
-                    <a type="application/rss+xml" href="/index.xml">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-[1em] w-auto inline-block align-middle -mt-0.5" viewBox="0 0 24 24">
+                    <a type="application/rss+xml" href="/index.xml" alt="RSS feed" aria-label="RSS feed">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-[1em] w-auto inline-block align-middle -mt-0.5" viewBox="0 0 24 24" aria-label="RSS icon with radio waves emanating from a dot in the lower left">
                         <!-- Icon from Logos free icons by Streamline - https://creativecommons.org/licenses/by/4.0/ -->
                             <g fill="currentColor" stroke="none" stroke-linejoin="round">
                                 <path d="M1.5 19.5a3 3 0 1 0 6 0a3 3 0 1 0-6 0"></path>
@@ -63,6 +71,9 @@
                     </a>
                     <button id="theme-toggle" class="cursor-pointer hover:opacity-70 transition-opacity" aria-label="Toggle theme">
                         <span id="theme-icon"></span>
+                    </button>
+                    <button id="contrast-toggle" class="cursor-pointer hover:opacity-70 transition-opacity" aria-label="Toggle high contrast">
+                        <span id="contrast-icon"></span>
                     </button>
                 </div>
             </nav>
@@ -141,9 +152,9 @@
 </section>
 <section id="What-I-like-About-Zine">
 <h2><a href="#What-I-like-About-Zine">What I like About Zine</a></h2>
-<p>I like the simplicity of Zine, and it’s been really simple to understand how both routing and rendering works. It gets out of my way. <code class="language-plaintext" translate="no" tabindex="0">SuperMD
-</code> and <code class="language-plaintext" translate="no" tabindex="0">SuperHTML
-</code> are also nice to work with, but I’ve yet to see both the full potential of them and the limitations. I’ve previously worked with for instance <code class="language-plaintext" translate="no" tabindex="0">Templ
+<p>I like the simplicity of Zine, and it’s been really simple to understand how both routing and rendering works. It gets out of my way. <code class="language-plaintext" translate="no">SuperMD
+</code> and <code class="language-plaintext" translate="no">SuperHTML
+</code> are also nice to work with, but I’ve yet to see both the full potential of them and the limitations. I’ve previously worked with for instance <code class="language-plaintext" translate="no">Templ
 </code> to generate HTML, so I’m excited to see how Zine compares.</p>
 </section>
 <section id="Whats-Next">
@@ -156,9 +167,9 @@
 <section id="RSS-✅">
 <h3><a href="#RSS">RSS ✅</a></h3>
 <p>I’m a big fan of RSS, and it’s my preferred way of reading blogs. I’ve used Kristoff’s RSS implementation as a base, but there’s one limitation that I want to work on - there’s no way to render the full content of a post in the feed, since it’s a subpage. This is a limitation of Zine itself, so if I want to change this I’ll have to dig into the Zine source code and try to implement it.</p>
-<p>The limitation can be seen in this excerpt from the RSS template, where I’m trying to render the full content of a post. This errors out with <code class="language-plaintext" translate="no" tabindex="0">only the main page can be rendered for now, sorry!
+<p>The limitation can be seen in this excerpt from the RSS template, where I’m trying to render the full content of a post. This errors out with <code class="language-plaintext" translate="no">only the main page can be rendered for now, sorry!
 </code>.</p>
-<pre class="athl athl-themes dark light relative" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">html</span><code class="language-html block overflow-x-auto" translate="no" tabindex="0"><div class="line" data-line="1"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">ctx</span> <span style="color: light-dark(#fe640b, #fab387); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">:loop</span><span style="color: light-dark(#04a5e5, #89dceb); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">=</span><span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&quot;<span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">$page.subpages()</span>&quot;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
+<pre class="athl athl-themes relative rounded-lg p-2 dark light" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">html</span><code class="language-html block overflow-x-auto" translate="no" tabindex="0" role="code"><div class="line" data-line="1"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">ctx</span> <span style="color: light-dark(#fe640b, #fab387); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">:loop</span><span style="color: light-dark(#04a5e5, #89dceb); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">=</span><span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&quot;<span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">$page.subpages()</span>&quot;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div><div class="line" data-line="2">  <span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">item</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div><div class="line" data-line="3">    <span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;!-- </span>
 </div><div class="line" data-line="4"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">      Here goes the rest of the RSS info for the post</span>
@@ -170,7 +181,7 @@
 <section id="Update">
 <h4><a href="#Update">Update</a></h4>
 <p>I’ve implemented a full RSS feed, which is kind of a hack but it ain’t stupid if it works. The solution revolves around fetching the content sections of a page, and then generating the HTML for each section. This is how the XML for the RSS feed looks like now:</p>
-<pre class="athl athl-themes light dark relative" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">html</span><code class="language-html block overflow-x-auto" translate="no" tabindex="0"><div class="line" data-line="1"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">ctx</span> <span style="color: light-dark(#fe640b, #fab387); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">:loop</span><span style="color: light-dark(#04a5e5, #89dceb); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">=</span><span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&quot;<span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">$page.subpages()</span>&quot;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
+<pre class="athl athl-themes relative rounded-lg p-2 light dark" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">html</span><code class="language-html block overflow-x-auto" translate="no" tabindex="0" role="code"><div class="line" data-line="1"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">ctx</span> <span style="color: light-dark(#fe640b, #fab387); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">:loop</span><span style="color: light-dark(#04a5e5, #89dceb); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">=</span><span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&quot;<span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">$page.subpages()</span>&quot;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div><div class="line" data-line="2">  <span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">item</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div><div class="line" data-line="3">    <span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">title</span> <span style="color: light-dark(#fe640b, #fab387); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">:text</span><span style="color: light-dark(#04a5e5, #89dceb); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">=</span><span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&quot;<span style="color: light-dark(#40a02b, #a6e3a1); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">$loop.it.title</span>&quot;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;/</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">title</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div><div class="line" data-line="4">    <span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;!-- </span>
@@ -183,7 +194,7 @@
 </div><div class="line" data-line="11"><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&lt;/</span><span style="color: light-dark(#1e66f5, #89b4fa); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">ctx</span><span style="color: light-dark(#7c7f93, #9399b2); font-weight: light-dark(normal, normal); text-decoration: light-dark(none, none);">&gt;</span>
 </div></code></pre>
 <p>And the corresponding change to the post:</p>
-<pre class="athl athl-themes light dark relative" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">plaintext</span><code class="language-plaintext block overflow-x-auto" translate="no" tabindex="0"><div class="line" data-line="1">#### [Heading]($section.id(&quot;heading&quot;))
+<pre class="athl athl-themes relative rounded-lg p-2 dark light" style="color: light-dark(#4c4f69, #cdd6f4); background-color: light-dark(#eff1f5, #1e1e2e);"><span class="absolute top-0 right-4 -translate-y-full rounded-t-lg px-2 text-base" style="background-color: light-dark(var(--color-latte-base), var(--color-mocha-base)); color: light-dark(var(--color-latte-text), var(--color-mocha-text));">plaintext</span><code class="language-plaintext block overflow-x-auto" translate="no" tabindex="0" role="code"><div class="line" data-line="1">#### [Heading]($section.id(&quot;heading&quot;))
 </div><div class="line" data-line="2">
 </div><div class="line" data-line="3">Text goes here...
 </div></code></pre>
@@ -256,26 +267,49 @@
         <script>
             const themeToggle = document.getElementById('theme-toggle');
             const themeIcon = document.getElementById('theme-icon');
+            const contrastToggle = document.getElementById('contrast-toggle');
+            const contrastIcon = document.getElementById('contrast-icon');
             const html = document.documentElement;
 
-            function updateIcon() {
+            function updateThemeIcon() {
               const currentTheme = html.style.colorScheme ||
                   (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
               themeIcon.textContent = currentTheme === 'dark' ? '☼' : '☾';
             }
 
-            updateIcon();
+            function updateContrastIcon() {
+              const isHighContrast = html.classList.contains('hc');
+              contrastIcon.textContent = isHighContrast ? '◑' : '◐';
+            }
+
+            updateThemeIcon();
+            updateContrastIcon();
 
             themeToggle.addEventListener('click', () => {
               const currentTheme = html.style.colorScheme ||
                   (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
               const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
               html.style.colorScheme = newTheme;
-              html.className = newTheme
+              html.classList.remove('light', 'dark');
+              html.classList.add(newTheme);
               localStorage.setItem('theme', newTheme);
-              updateIcon();
+              updateThemeIcon();
             });
+
+            contrastToggle.addEventListener('click', () => {
+              const isHighContrast = html.classList.contains('hc');
+              if (isHighContrast) {
+                html.classList.remove('hc');
+                localStorage.setItem('highContrast', 'false');
+              } else {
+                html.classList.add('hc');
+                localStorage.setItem('highContrast', 'true');
+              }
+              updateContrastIcon();
+            });
+
         </script>
+
 
     </body>
   </html>
