deploy: f38e442cf68a343aade19d8c526fd55ed8ac90e4

--- a/keywords/elixir/index.html
+++ b/keywords/elixir/index.html
@@ -75,7 +75,12 @@
     
     <span class="text-3xl my-4">elixir</span>
     <div>
-      <a href="/using-djot-for-content/">
+      <a href="/one-year-retrospective-of-elixir/">
+        <div class="mt-4">
+          <span class="text-base">Jan 19, 2026</span>
+          <div class="text-xl font-bold">One Year Retrospective of Elixir</div>
+        </div>
+      </a><a href="/using-djot-for-content/">
         <div class="mt-4">
           <span class="text-base">Feb 18, 2025</span>
           <div class="text-xl font-bold">Using Djot for Content</div>
