deploy: a1bd1a994b966fa095c880386fb0212093bef6c3

--- a/404.html
+++ b/404.html
@@ -76,8 +76,8 @@
         <a href="/404/">404 - Not Found</a>
       </span>
       <article class="text-xl">
-        <html><head></head><body><p><a href="/">Go to homepage</a></p>
-</body></html>
+        <p><a href="/">Go to homepage</a></p>
+
       </article>
     </div>
   </div>
