--- a/about/index.html
+++ b/about/index.html
@@ -76,9 +76,9 @@
         <a href="/about/">Adam aka Ackurat.</a>
       </span>
       <article class="text-xl">
-        <html><head></head><body><p><img class="size-60 float-right rounded-full" alt="Photo of Adam" src="/images/adam.jpg"/></p>
+        <p><img class="size-60 float-right rounded-full" alt="Photo of Adam" src="/images/adam.jpg"/></p>
 <p>I’m a software engineer based in Sweden. I specialize in backend development and databases, particularly Elixir and PostgreSQL, and have worked within the payment domain for quite a while. I work at <a href="https://www.kivra.com">Kivra</a>, where I write payment related backend services in Elixir (and sometimes Erlang). You can find me on <a href="https://www.github.com/ackurat">GitHub</a> or <a href="https://www.linkedin.com/in/adamliliemark">LinkedIn</a>.</p>
-</body></html>
+
       </article>
     </div>
   </div>
